--- a/package.json
+++ b/package.json
@@ -3,8 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "react": "^16.7.0",
-    "react-dom": "^16.7.0"
+    "final-form": "^4.11.0",
+    "lodash": "^4.17.11",
+    "react": "16.7.0-alpha.2",
+    "react-bootstrap": "^1.0.0-beta.5",
+    "react-dom": "16.7.0-alpha.2",
+    "react-final-form": "^4.0.2",
+    "react-select": "^2.3.0"
   },
   "devDependencies": {
     "react-scripts": "2.1.3"
