--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
   "private": true,
   "dependencies": {
     "final-form": "^4.11.0",
+    "final-form-arrays": "^1.1.1",
     "lodash": "^4.17.11",
     "react": "16.7.0-alpha.2",
     "react-bootstrap": "^1.0.0-beta.5",
     "react-dom": "16.7.0-alpha.2",
     "react-final-form": "^4.0.2",
+    "react-final-form-arrays": "^2.0.1",
     "react-select": "^2.3.0"
   },
   "devDependencies": {
